# nightjar

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: E01_minimal_example.py  E02_advanced_example.py  E03_advanced_example.py  minimal_example.py  minimal_example_jar.py  minimal_example_new_style.py  readme_example.py
examples/minimal_module/: __init__.py  __main__.py
examples/minimal_module/vehicle/: __init__.py  base.py  car.py  van.py
src/nightjar/: __init__.py  annotations.py  base.py  helpers.py  registry.py  serializers.py  types.py  utils.py
